# autoresearch

./: .gitignore  CLAUDE.md  Dockerfile  PLAN-knowledge-store.md  README.md  app.py  docker-compose.yml  knowledge_store.py  pyproject.toml  research.py  research_program.md  search.py  test_wecom_bot.py  wecom_bot.py
.github/workflows/: cd.yml
tests/: test_integration.py  test_knowledge_store.py  test_research.py  test_search.py
