[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous research agent inspired by Karpathy's autoresearch"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0",
    "trafilatura>=1.8.0",
]

[project.scripts]
autoresearch = "research:main"
